[package]
name = "jmespath"
version = "0.0.1"
authors = ["Michael Dowling <mtdowling@gmail.com>"]
description = "Rust implementation of JMESPath, a query language for JSON"
readme = "README.md"
keywords = ["json", "jmespath", "query"]
homepage = "https://github.com/mtdowling/jmespath.rs"
repository = "https://github.com/mtdowling/jmespath.rs"
documentation = "http://mtdowling.com/jmespath.rs/jmespath/"
license = "MIT"
build = "build.rs"

[dependencies]
serde = "^0.6"
serde_json = "^0.6"

[dependencies.clippy]
version = "^0.0.36"
optional = true

[build-dependencies]
serde_json = "^0.6"
slug = "0.1.1"

[features]
nightly = ["clippy"]
