[package]
name = "jmespath"
version = "0.1.0"
authors = ["Michael Dowling <mtdowling@gmail.com>"]
description = "Rust implementation of JMESPath, a query language for JSON"
readme = "README.md"
keywords = ["json", "jmespath", "query"]
homepage = "https://github.com/mtdowling/jmespath.rs"
repository = "https://github.com/mtdowling/jmespath.rs"
documentation = "http://mtdowling.com/jmespath.rs/jmespath/"
license = "MIT"
build = "build.rs"

[dependencies]
serde = "^0.8"
serde_json = "^0.8"
lazy_static = "^0.2.2"

[build-dependencies]
serde_json = "^0.8"
slug = "0.1.2"

[features]
sync = []
