[package]
name = "jmespath"
version = "0.1.1"
authors = ["Michael Dowling <mtdowling@gmail.com>"]
description = "Rust implementation of JMESPath, a query language for JSON"
readme = "README.md"
keywords = ["json", "jmespath", "query"]
homepage = "https://github.com/mtdowling/jmespath.rs"
repository = "https://github.com/mtdowling/jmespath.rs"
documentation = "https://docs.rs/jmespath/"
license = "MIT"
build = "build.rs"

[dependencies]
serde = { version = "1", features = ["rc"] }
serde_json = "1"
lazy_static = "^0.2.2"

[build-dependencies]
serde_json = "1"
slug = "0.1.2"

[features]
# `sync` utilizes an Arc instead of an Rc for JMESPath runtime variables.
# Using an Arc allows you to share compiled expressions across threads.
sync = []
# `specialized` enables the use of specialization for more efficient code
# however at time of writing it is unstable & so requires a nightly compiler.
# See https://github.com/rust-lang/rust/issues/31844 for the latest status.
specialized = []
