[package]
name = "jmespath-cli"
version = "0.5.0"
authors = ["Michael Dowling <mtdowling@gmail.com>"]
license = "MIT"
edition = "2024"

[lib]
name = "jmespath_cli"
path = "src/lib.rs"

[[bin]]
name = "jp"
path = "src/main.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
jmespath = { path = "../jmespath", version = "0.5.0" }
clap = { version = "4", features = ["derive"] }
