[package]
name = "jmespath-macros"
version = "0.1.1"
authors = ["Michael Dowling <mtdowling@gmail.com>"]
readme = "README.md"
keywords = ["json", "jmespath", "query"]
homepage = "https://github.com/jmespath/jmespath.rs"
repository = "https://github.com/jmespath/jmespath.rs"
documentation = "https://docs.rs/jmespath-macros/"
license = "MIT"
description = "Statically compiles JMESPath expressions."

[dependencies.jmespath]
path = ".."
version = "0.2.0"

[lib]
name = "jmespath_macros"
plugin = true
