[package]
name = "jmespath_macros"
version = "0.0.1"
authors = ["Michael Dowling <mtdowling@gmail.com>"]
readme = "README.md"
keywords = ["json", "jmespath", "query"]
homepage = "https://github.com/mtdowling/jmespath.rs"
repository = "https://github.com/mtdowling/jmespath.rs"
documentation = "http://mtdowling.com/jmespath.rs/jmespath/"
license = "MIT"
description = "Statically compiles JMESPath expressions."

[dependencies.jmespath]
path = ".."
version = "0.*"

[lib]
name = "jmespath_macros"
plugin = true
